add carousel component \n ad productPage \n fix connections \n update variables names

--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -3,13 +3,20 @@ li{
     list-style: none;
 }
 
-.productDiv{
-    display: flex;
-    flex-direction: column;
-}
 
+/*                  carousel.js */
 .productsUl{
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
+}
+
+.carouselDiv{
+    display: flex;
+}
+
+/*                  product.js */
+.productDiv{
+    display: flex;
+    flex-direction: column;
 }
