--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -1,6 +1,18 @@
+body{
+    margin: 0;
+}
+
+p{
+    margin: 0;
+}
 
 li{
     list-style: none;
+}
+
+.mainContent{
+    min-height:75vh;;
+    position: relative;
 }
 
 
@@ -18,4 +30,5 @@ li{
 .productsUl{
     display: flex;
     gap: 10px;
+    padding: 0;
 }
