--- a/client/src/style/footer.css
+++ b/client/src/style/footer.css
@@ -1,4 +1,10 @@
 #footer{
     height: 10vh;
-    background-color: darkgrey;
+    background-color: darkgrey;    
+}
+
+#footerBottom{
+    margin-left: 8%;
+    margin-right: 8%;
+    border-top:  1px solid black;
 }
