--- a/client/src/style/header.css
+++ b/client/src/style/header.css
@@ -2,13 +2,54 @@
     background-color: bisque;
     height: 15vh;
 }
-
-#headerLinksDiv{
+#headerTopDiv{
     display: flex;
-    gap: 10px;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+/* LongIn Register */
+#headerTopDiv > div{
+    display: flex;
+    justify-content: end;
+    gap: 20px;
+    font-size: large;
 }
 
 #headerSearchDiv{
     display: flex;
+    justify-content: space-between;
     gap: 40px;
+    padding: 0px 40px;
+}
+
+#headerSearchDiv a{
+    margin-left: 10%;
+}
+
+#headerSearchDiv form{
+    width: 60%;
+}
+
+#headerSearchDiv form input{
+    width: 70%;
+    height: 80%;
+}
+
+#headerSearchDiv form button{
+    width: 15%;
+    margin: 0px 7.5px;
+}
+
+
+#headerCategoryDiv{
+    display: flex;
+    gap: 20px;
+    padding: 20px 0px 0px;
+    justify-content: center;
+}
+
+
+
+#nameHeader{
+    font-size: xx-large;
 }
